--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "president-game",
+  "name": "presido-ng",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-   "dev": "next dev",
-   "build": "next build",
-   "start": "next start",
-   "lint": "next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "lucide-react": "^0.314.0",
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@types/node": "20.11.30",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   }
 }
