--- a/package.json
+++ b/package.json
@@ -9,20 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.314.0",
-    "next": "14.2.3",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "8.4.38",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "autoprefixer": "^10.4.17",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
   }
 }
